# smawg

./: .gitignore  CHANGELOG.md  README.md  add-pre-commit-hook.sh  requirements.txt  setup.cfg  setup.py
assets/: tiny.json
docs/: hooks.md  rules.md  style.md
examples/: tiny_data.json
smallworld/: __init__.py  cli.py  engine.py
smallworld/tests/: __init__.py  common.py  test_engine.py
smawg/: __init__.py  __main__.py  _common.py  _engine.py  _metadata.py  _plugin_interface.py  _rules.py  basic_rules.py  cli.py  common.py  default_rules.py  engine.py  exceptions.py  viz.py
smawg/assets/: standard_2_players.json  standard_3_players.json  standard_4_players.json  standard_5_players.json  tiny.json
smawg/assets_schema/: ability.json  assets.json  map.json  race.json  tile.json
smawg/tests/: __init__.py  common.py  test_assets.py  test_common.py  test_engine.py  test_game_basic.py  test_game_default.py  test_main.py  test_misc.py  test_plugin_interface.py  test_smawg.py
