[metadata]
name = smawg
version = 0.0.1
author = Dmitry Alexandrov
author_email = adk230@yandex.ru
description = Backend engine for Small World board game
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
url = https://github.com/Expurple/smawg

[options]
include_package_data = true
install_requires =
    tabulate
packages = find:
python_requires = >=3.9

[options.package_data]
smawg = assets/*.json

[options.packages.find]
exclude =
    smawg.tests

[options.extras_require]
dev =
    flake8
    flake8-docstrings
    mypy
    types-tabulate

[flake8]
    # "First line should be in imperative mood; try rephrasing"
    # is annoying, especially with properties.
    # Maybe https://github.com/PyCQA/pydocstyle/issues/566 will fix this later.
    ignore = D401
