[metadata]
name = smawg
version = 0.12.0
author = Dmitrii Aleksandrov
author_email = adk230@yandex.ru
description = Backend engine for Small World board game
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
url = https://github.com/Expurple/smawg

[options]
include_package_data = true
install_requires =
    graphviz
    jsonschema
    tabulate
packages = find:
python_requires = >=3.10

[options.package_data]
smawg =
    assets/*.json
    assets_schema/*.json
    py.typed

[options.packages.find]
exclude =
    smawg.tests

[options.extras_require]
dev =
    flake8
    flake8-docstrings
    flake8-quotes
    mypy
    types-jsonschema
    types-tabulate

[flake8]
# Prefer " over ' (""" is preferred over ''' by default).
inline-quotes = double
# "First line should be in imperative mood; try rephrasing"
# is annoying, especially with properties.
# Maybe https://github.com/PyCQA/pydocstyle/issues/566 will fix this later.
ignore = D401
